--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-middleware": "^3.6.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.4.4"
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "axios": "^0.19.0"
   }
 }
