--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "react-router-dom": "^5.0.1"
   }
 }
